# appstream-runner

./: CMakeLists.txt
src/: CMakeLists.txt  appstreamrunner.cpp  appstreamrunner.desktop  appstreamrunner.h
